k8s/working/workloads/backend-api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sd-gen-backend-api
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/api"
spec:
  selector:
    app: sd-gen-backend-api
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
