k8s/working/workloads/jupyter-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sd-gen-jupyter-svc
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: sd-gen-jupyter
  type: NodePort
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
