k8s/working/workloads/jupyter-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: "sd-gen-jupyter-ingress"
    namespace: default
    annotations:
      kubernetes.io/ingress.class: alb
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      alb.ingress.kubernetes.io/group.name: webui-instance-group
      alb.ingress.kubernetes.io/group.order: '1'
      alb.ingress.kubernetes.io/inbound-cidrs: xxx.xxx.xxx.xxx/3210.0.0.0/16
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 10000}]'
spec:
    rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "sd-gen-jupyter-svc"
                port:
                  number: 8888
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: "sd-gen-jupyter-svc"
                port:
                  number: 8888
